# 2026-artificial-stone-delta-e-web

./: .env.example  .gitignore  README.md  app.js  index.html  pyproject.toml
.agents/skills/stone-lab-generator/: SKILL.md
docs/: project-notes.md  setup.md
lab-generator/: generate_lab_from_reference.py
lab-generator/data/: 0418.csv
lab-generator/instructions/: V3_生成色差規則.md
lab-generator/prompts/: Codex_新範本執行方式整理.md
tests/: test_project_structure.py
web/delta-e/: app.js  styles.css
web/delta-e-frw-21-2/: README.md  app.js  index.html
人造石色差/: generate_lab_from_reference.py
人造石色差/data/: 0425_色膏2%.csv
人造石色差/instructions/: V3_生成色差規則.md
人造石色差/output/: 0418_generated_lab_output.xlsx
人造石色差/prompts/: Codex_新範本執行方式整理.md
